# Core-Battle

./: .gitignore  launch.bat
.ia/: RULES.md  SPECIFICATIONS.md  index.md
client/: Cargo.toml  tauri.conf.json
client/src/: lib.rs  main.rs
client/src/styles/: layout.rs
