[package]
name = "core_battle_client"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.6", features = ["signals", "desktop"] }
dioxus-core = { version = "0.6" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
